--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.6.1",
     "apollo-server-express": "^3.11.1",
     "express": "^4.18.2",
     "graphql": "^16.6.0"
