--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "on-the-line-server-app",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "index.js",
-    "start": "index.js",
+    "dev": "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.1.1",
     "@prisma/client": "^4.6.1",
-    "apollo-server-express": "^3.11.1",
-    "express": "^4.18.2",
     "graphql": "^16.6.0"
   }
 }
