--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "@apollo/server": "^4.1.1",
     "@prisma/client": "^4.6.1",
+    "gql": "^1.1.2",
     "graphql": "^16.6.0"
+  },
+  "devDependencies": {
+    "prisma": "^4.6.1"
   }
 }
