--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/server": "^4.1.1",
     "@prisma/client": "^4.6.1",
+    "apollo-server": "^3.11.1",
     "gql": "^1.1.2",
     "graphql": "^16.6.0"
   },
