--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@apollo/server": "^4.1.1",
     "@prisma/client": "^4.6.1",
     "apollo-server": "^3.11.1",
-    "gql": "^1.1.2",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
     "prisma": "^4.6.1"
