--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
-    "prisma": "^4.6.1"
+    "prisma": "^4.6.1",
+    "typescript": "^4.8.4"
   }
 }
