--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@apollo/server": "^4.1.1",
     "@prisma/client": "^4.6.1",
     "apollo-server": "^3.11.1",
+    "apollo-server-express": "^3.11.1",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6"
   },
